Fixed Su problems, Framaroot 1.6.1, Install Bootmenu Button Temporary fix, and Dialogs